--- a/style.css
+++ b/style.css
@@ -1,28 +1,53 @@
 @charset "utf-8";
 /* CSS Document */
+*{margin:0px;
+padding: 0px;
+}
+#cabecera {
+    width: 100px;
+    height: 700px;
+    background-color: black ;
+}
 h1 {
     color: white;
-    font-size: 70px;
-    padding: 30px;
-}
-body {
-    background-color: lightcoral;
+    font-size: 60px;
     padding: 20px;
 }
-header {
-    background-color: black;
+body {
+    background-color: rgb(0, 0, 0);
+
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+.botonera a {
+    width: 100%;
+    height: 70px;
+    text-decoration: none;
+    color: #ffffff;
+    padding: 10px;
+    border: 1px solid white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+nav ul li {
+    display: inline;
+
+}
+main {
+    background-color: rgb(175, 41, 119);
 }
 
 
 
 a:hover {
-    color: rgb(30, 179, 179);
+    color: rgb(175, 41, 119);
     font-size: 1em;
 }
-a:link {
-    color: black;
-}
-
 a {
     text-decoration: none;
+}
+h6 {
+    text-decoration: dotted;
+    color: rgb(255, 255, 255);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
 }
