--- a/style.css
+++ b/style.css
@@ -4,40 +4,42 @@
 padding: 0px;
 }
 #cabecera {
-    width: 100px;
-    height: 700px;
-    background-color: black ;
+    height: 120px;
+    background-color: black;
+    margin: 10px;
 }
+
 h1 {
     color: white;
-    font-size: 60px;
-    padding: 20px;
+    font-size: 50px;
+    padding: 10px;
 }
 body {
     background-color: rgb(0, 0, 0);
-
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .botonera a {
     width: 100%;
-    height: 70px;
+    height: 120px;
     text-decoration: none;
     color: #ffffff;
     padding: 10px;
     border: 1px solid white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
 nav ul li {
-    display: inline;
-
+    display: inline-block;
 }
 main {
-    background-color: rgb(175, 41, 119);
+    background-color: rgb(156, 46, 83);
 }
-
-
-
+h2 {
+    color: white;
+    Font-size:25px;
+}
+footer {
+    background-color: white
+}
 a:hover {
     color: rgb(175, 41, 119);
     font-size: 1em;
