--- a/style.css
+++ b/style.css
@@ -3,55 +3,58 @@
 *{margin:0px;
 padding: 0px;
 }
-#cabecera {
-    height: 120px;
-    background-color: black;
-    padding: 30px;
+@import url(<link rel="stylesheet" href="https://use.typekit.net/jrm8hty.css">);
+header {
+    background-color: #EFE2D8
 }
 h1 {
-    color: white;
-    font-size: 50px;
+    font-size: 30px;
     padding: 10px;
+    color: #375D6D;
+    font-family: "lato", sans-serif;
+    font-weight: 300;
+    font-style: italic;
 }
-body {
-    background-color: rgb(0, 0, 0);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.botonera a {
-    width: 100%;
-    height: 120px;
-    text-decoration: none;
-    color: #ffffff;
-    padding: 10px;
-    border: 1px solid white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-nav ul li {
-    display: inline-block;
-}
-main {
-    background-color: rgb(156, 46, 83);
-}
-h2 {
-    color: white;
-    Font-size:25px;
-}
-h4 { 
-    color: white;
-}
-footer {
-    background-color: white
-}
-a:hover {
-    color: rgb(175, 41, 119);
-    font-size: 1em;
+
+.botones {
+    font-size: 15px;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: "lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    list-style: none;
+
+
 }
 a {
     text-decoration: none;
+    color: #375D6D;
+    margin: 20px;
 }
-h6 {
-    text-decoration: dotted;
-    color: rgb(255, 255, 255);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 10px;
+a:hover {
+    color: #a51481
+}
+.fondo-contenedor {
+    background-image: url('images/fondo.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    position: relative;
+    padding: 20px;
+}
+
+
+main {
+    background-color: #375D6D
+}
+div h2 {
+    font-family: "lato", sans-serif;
+    font-family: "lato", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+    color: #EFE2D8;
+    font-size: 60px;
+
 }
