--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 
 /* CSS Document */
+
+/*pantalla utilizada tamaño 1920 x 1080*/
 * {
     margin: 0px;
     padding: 0px;
@@ -36,7 +38,9 @@ h1 {
 
 
 }
-
+.baner {
+    max-width: 100%;
+}
 .botones a {
     /*propiedad para que el texto del link no tenga nada*/
     color: #375D6D;
@@ -70,9 +74,10 @@ h1 {
 main {
     background-color: #375D6D
 }
+
 .inicio {
-        height: 100vh;
-        }
+    height: 100vh;
+}
 
 
 
@@ -91,10 +96,12 @@ main {
     color: #EFE2D8;
     font-size: 80px;
     display: flex;
-    justify-content: center; /* nombre al centro*/
+    justify-content: center;
+    /* nombre al centro*/
     /* espacio izq*/
     padding-top: 80px;
-    letter-spacing: 4px; /*espaciado de letras*/
+    letter-spacing: 4px;
+    /*espaciado de letras*/
 }
 
 /*aca empieza mi main*/
@@ -111,19 +118,20 @@ main {
 /*pantalla completa*/
 #sobre-mi {
     height: 100vh;
-    background-color: #EFE2D8; 
+    background-color: #EFE2D8;
 }
 
 
 .presentacion {
 
-/* padding: 30px 20px 80px 20px ; Espacio interno */
-display:flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
-/*box-sizing: border-box; (Incluye el padding y el borde en el ancho total)*/
+    /* padding: 30px 20px 80px 20px ; Espacio interno */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /*box-sizing: border-box; (Incluye el padding y el borde en el ancho total)*/
 }
+
 /* titulo sobre mi */
 
 .presentacion h2 {
@@ -134,8 +142,8 @@ align-items: center;
     font-style: normal;
     font-size: 30px;
     margin-top: 40px;
-    }
-    
+}
+
 /*texto de presentacion*/
 .presentacion p {
     color: #375D6D;
@@ -143,50 +151,53 @@ align-items: center;
     font-weight: 300;
     font-style: normal;
     font-size: 30px;
-    max-width: 800px; /*es el ancho  maximo de la caja siempre va en p */ 
+    max-width: 800px;
+    /*es el ancho  maximo de la caja siempre va en p */
     margin-top: 100px;
 }
 
-
-
 .informacion {
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 
 
 
 
-.info {  /* modificaciones de p y la lista de herramientas*/
+.info {
+    /* modificaciones de p y la lista de herramientas*/
     color: #375D6D;
     font-family: "lato", sans-serif;
     font-weight: 400;
     font-style: italic;
-    border: 1px solid #375D6D;  /*caja contenedora*/
-    width:400px;  /*tamaño caja*/
+    border: 1px solid #375D6D;
+    /*caja contenedora*/
+    width: 400px;
+    /*tamaño caja*/
     height: 100px;
     border-radius: 30px;
     margin: 10px;
     padding: 30px;
     margin-top: 100px;
-    }
+}
 
 /*section proyectos*/
-    #mis-proyectos {
-        display:flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        padding: 20% ;
-    }
+#mis-proyectos {
+    margin-top: 20 px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 
 .image {
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: space-evenly;
     align-items: baseline;
 
 }
+
 #mis-proyectos h2 {
     letter-spacing: 4px;
     font-family: "lato", sans-serif;
@@ -196,66 +207,52 @@ align-items: center;
 }
 
 
-
-.proyectos-img h4{
-    font-family: "lato", sans-serif; /*ligth italic*/
-font-weight: 300;
-font-style: italic;
-font-size: 25px;
-color: #EFE2D8;
-margin: 20px;
-padding: 20px;
-text-align: left;
+/*imagenes del proyecto*/
+.proyectos-img h4 {
+    font-family: "lato", sans-serif;
+    /*ligth italic*/
+    font-weight: 300;
+    font-style: italic;
+    font-size: 25px;
+    color: #EFE2D8;
+    margin: 20px;
+    padding: 20px;
+    text-align: left;
 }
-.proyectos-img  img{
-    display:flex; 
+
+.proyectos-img img {
+    display: flex;
     flex-direction: row;
     padding: 30px;
     justify-content: space-around;
-    margin: 0 20px;
+    margin left: 20px;
+    border-radius: 5px;
 }
 
-/*otros-ejemplos*/
 
-.otros-ejemplos {
-    height: 100vh;
-    background-color: #EFE2D8
-}
 
 footer {
     background-color: #EFE2D8;
 }
 
-#contacto {
-    color: #375D6D;
-    margin: 20px;
-    display: flex;
-    font-size: 14px;
-    /* Tamaño del texto */
-    color: #375D6D;
-    /* Color del texto */
-    cursor: pointer;
-    /* Cambia el cursor cuando se pasa sobre el botón */
-}
-    #contacto li a {
-        color: #375D6D;
-        margin: 20px;
-        display: flex;
-        font-size: 14px;
-        /* Tamaño del texto */
-        color: #375D6D;
-        /* Color del texto */
-        cursor: pointer;
-        /* Cambia el cursor cuando se pasa sobre el botón */
-        display: flex;
+#contacto {}
 
-}
-
-.copy {
+.redes-1 h2 {
     color: #375D6D;
     font-family: "lato", sans-serif;
-    font-style: normal;
-    font-size: 15px;
+    font-weight: 400;
+    font-style: italic;
     display: flex;
-    flex-direction: ;
+}
+
+.botones-redes a {
+    display: flex;
+    text-decoration: none;
+    color: #375D6D;
+    font-family: "lato", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
