--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
     text-decoration: none;
     list-style: none;
     font-family: "elza", sans-serif;
+    font-weight:400;
+    font-style:normal;
 }
 
 @import url(<link rel="stylesheet" href="https://use.typekit.net/wqz7tsk.css">);
@@ -114,7 +116,8 @@ main {
 /* titulo sobre mi */
 .caja-presentacion h2 { 
     color: #B34F93;
-    font-size: 80px
+    font-size: 80px;
+    font-weight:700;
 }
 
 /* imagen*/
@@ -151,16 +154,24 @@ align-items:center;
     font-size: 48;
 }
 
+.informacion-personal{
+    gap: 400px;
+}
+.otros-datos {
+    gap: 400px;
 
+}
 
 
 /*SECCION proyectos*/
 #mis-proyectos {
+    background-color: #F7EBF5;
     margin-top: 20 px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+
 }
 
 .image {
@@ -171,7 +182,7 @@ align-items:center;
 
 }
 
-#mis-proyectos h2 {
+#mis-proyectos h3 {
     letter-spacing: 4px;
     font-weight: 700;
     font-style: normal;
@@ -180,7 +191,7 @@ align-items:center;
 
 
 /*imagenes del proyecto*/
-.proyectos-img h4 {
+.proyectos-img h2 {
     /*ligth italic*/
     font-weight: 300;
     font-style: italic;
@@ -200,28 +211,23 @@ align-items:center;
     border-radius: 5px;
 }
 
-
+/*FOOTER*/
 
 footer {
-    background-color: #F7EBF5;
+    background-color: #D78FC6;
+    display: flex;
 }
 
 
 .redes-1 h2 {
-    color: #375D6D;
-    font-family: "lato", sans-serif;
     font-weight: 400;
     font-style: italic;
 }
 
 .botones-redes a {
     display: flex;
-    text-decoration: none;
-    color: #375D6D;
-    font-family: "lato", sans-serif;
+
     font-weight: 400;
     font-style: italic;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
 }
