--- a/style.css
+++ b/style.css
@@ -81,12 +81,12 @@ main {
 
 .inicio p {
     font-weight: 700;
-    font-style: normal;
     color: #F7EBF5;
-    font-size: 80px;
+    font-size: 128px;
     display: flex;
     justify-content: center;/* nombre al centro*/
     letter-spacing: 4px;
+    padding-top: 40px;
     /*espaciado de letras*/
 }
 
@@ -122,18 +122,14 @@ main {
 
 /* imagen*/
 .caja-presentacion img {
-    max-width: 100px;
-    max-height: 100px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
-/*PARRAFO de presentacion*/
+/*Parrafo de presentacion*/
 .caja-presentacion p {
-    font-weight:400;
     font-size: 35px;
     color: #B34F93;
     max-width: 950px;
-    margin-bottom: 20px;
 }
 
 
@@ -150,8 +146,9 @@ justify-content: space-evenly;
 align-items:center;
 }
 
-#datos h2 {
-    font-size: 48;
+#datos h3 {
+    font-size: 35px;
+    font-weight:700
 }
 
 .informacion-personal{
@@ -191,7 +188,7 @@ align-items:center;
 
 
 /*imagenes del proyecto*/
-.proyectos-img h2 {
+.proyectos-muestra h2 {
     /*ligth italic*/
     font-weight: 300;
     font-style: italic;
@@ -202,7 +199,7 @@ align-items:center;
     text-align: left;
 }
 
-.proyectos-img img {
+.proyectos-muestra img {
     display: flex;
     flex-direction: row;
     padding: 30px;
@@ -211,7 +208,7 @@ align-items:center;
     border-radius: 5px;
 }
 
-/*FOOTER*/
+/*SECCION proyectos*/
 
 footer {
     background-color: #D78FC6;
