--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ main {
 .caja-presentacion h2 { 
     color: #B34F93;
     font-size: 80px;
-    font-weight:700;
+    font-weight:700px;
 }
 
 /* imagen*/
