--- a/style.css
+++ b/style.css
@@ -79,14 +79,13 @@ main {
     height: 100vh;
 }
 
-.inicio p {
+.inicio h1 {
     font-weight: 700;
     color: #F7EBF5;
     font-size: 128px;
     display: flex;
     justify-content: center;/* nombre al centro*/
     letter-spacing: 4px;
-    padding-top: 40px;
     /*espaciado de letras*/
 }
 
@@ -117,19 +116,23 @@ main {
 .caja-presentacion h2 { 
     color: #B34F93;
     font-size: 80px;
-    font-weight:700px;
+    font-weight:700;
 }
 
 /* imagen*/
 .caja-presentacion img {
-    margin-top: 30px;
+    max-width: 100px;
+    max-height: 100px;
+    margin-top: 20px;
 }
 
-/*Parrafo de presentacion*/
+/*PARRAFO de presentacion*/
 .caja-presentacion p {
+    font-weight:400;
     font-size: 35px;
     color: #B34F93;
     max-width: 950px;
+    margin-bottom: 20px;
 }
 
 
@@ -146,9 +149,8 @@ justify-content: space-evenly;
 align-items:center;
 }
 
-#datos h3 {
-    font-size: 35px;
-    font-weight:700
+#datos h2 {
+    font-size: 80px;
 }
 
 .informacion-personal{
