--- a/style.css
+++ b/style.css
@@ -195,11 +195,19 @@ header {
     line-height: 1.5;
 }
 
+
 /* imagen*/
 .caja-presentacion img {
     max-width: 100px;
     max-height: 100px;
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    animation: pulse 1s infinite alternate;
+    top: 173%;
+    left: 18%;
 }
+
 
 /*PARRAFO de presentacion*/
 .caja-presentacion p {
@@ -373,9 +381,8 @@ header {
 
 
 .copy {
-    background-color: #D78FC6;
     width: 100%;
-    color: #7F3565;
+    color: #B34F93;
     font-size: 20px;
     display: flex;
     justify-content: space-around;
